@@ -1,5 +1,11 @@
 2020-04-29 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/pdk/gen.c,
+	  support/regression/tests/gcc-torture-execute-950511-1.c:
+	  Fix bug #2938.
+
+2020-04-29 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/pdk/gen.c:
 	  Improve pointer read on rematerialized stack location.
 
